# template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: lint.yml
