[project]
name = "template"
version = "0.1.0"
description = ""
authors = [
    {name = "Istalantar",email = "istalantar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pyright = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
extend-exclude = [".cache"]
line-length = 120

[tool.ruff.lint]
pydocstyle.convention = "pep257"
select = ["ALL"]
ignore = [
    # Documenting everything is a bit too much.
    "D100", "D107",
    # We do not need cryptographically secure random functions.
    "S311",
]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
reportUnnecessaryTypeIgnoreComment = "error"
# Pyodide "js" module is dynamic.
reportMissingModuleSource = "none"
